fix: thread-safe StringBuffer in streamResponse, readOnly transactions